--- a/ShareModel/src/main/resources/application.properties
+++ b/ShareModel/src/main/resources/application.properties
@@ -1,9 +1,35 @@
 
-#spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://172.16.59.122:3306/db_share?characterEncoding=utf8&useSSL=true
 spring.datasource.username=root
 spring.datasource.password=root
+
+# 更多数据源
+custom.datasource.names=ds1,ds2
+custom.datasource.ds1.type=com.zaxxer.hikari.HikariDataSource
+custom.datasource.ds1.driverClassName=com.mysql.jdbc.Driver
+custom.datasource.ds1.url=jdbc:mysql://172.16.59.121:3306/db_share
+custom.datasource.ds1.username=root111
+custom.datasource.ds1.password=root111
+
+custom.datasource.ds2.type=com.zaxxer.hikari.HikariDataSource
+custom.datasource.ds2.driverClassName=com.mysql.jdbc.Driver
+custom.datasource.ds2.url=jdbc:mysql://172.16.59.122:3306/db_share
+custom.datasource.ds2.username=root
+custom.datasource.ds2.password=root
+
+# 下面为连接池的补充设置，应用到上面所有数据源中
+#在spring boot2.x版本中，hikari终于荣升为默认数据源
+spring.datasource.hikari.maximum-pool-size=100
+spring.datasource.hikari.max-idle=10
+spring.datasource.hikari.max-wait=10000
+spring.datasource.hikari.min-idle=5
+spring.datasource.hikari.initial-size=5
+spring.datasource.hikari.validation-query=SELECT 1
+spring.datasource.hikari.test-on-borrow=false
+spring.datasource.hikari.test-while-idle=true
+spring.datasource.hikari.time-between-eviction-runs-millis=18800
 
 spring.jpa.database = MYSQL
 spring.jpa.show-sql = true
@@ -14,5 +40,10 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 #thymeleaf start
 #开发时关闭缓存,不然没法看到实时页面
 spring.thymeleaf.cache=false
-spring.thymeleaf.prefix=classpath:/templates/
 #thymeleaf end
+
+#Shiro start
+shiro.loginUrl=/login
+shiro.successUrl=/index
+shiro.errorUrl=/403
+#Shiro end
