Shiro配置调整;设置静态资源不拦截

--- a/ShareModel/src/main/resources/application.properties
+++ b/ShareModel/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.mvc.favicon.enabled = false
 
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
@@ -36,6 +37,7 @@ spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.DefaultNamingStrategy
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.open-in-view = false
 
 #thymeleaf start
 #开发时关闭缓存,不然没法看到实时页面
@@ -43,7 +45,7 @@ spring.thymeleaf.cache=false
 #thymeleaf end
 
 #Shiro start
-shiro.loginUrl=/login
+shiro.loginUrl=/
 shiro.successUrl=/index
 shiro.errorUrl=/403
 #Shiro end
