--- a/ShareModel/pom.xml
+++ b/ShareModel/pom.xml
@@ -25,6 +25,16 @@
 		<thymeleaf.version>3.0.9.RELEASE</thymeleaf.version>
 		<shiro.version>1.4.0</shiro.version>
 	</properties>
+	<repositories>
+		<repository>
+			<id>jahia</id>
+			<name>jahia repository</name>
+			<url>http://maven.jahia.org/maven2/</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
 
 	<dependencies>
 		<dependency>
@@ -91,6 +101,12 @@
 			<groupId>org.apache.shiro</groupId>
 			<artifactId>shiro-ehcache</artifactId>
 			<version>${shiro.version}</version>
+		</dependency>
+		<!--google的验证码框架-->
+		<dependency>
+			<groupId>com.google.code.kaptcha</groupId>
+			<artifactId>kaptcha</artifactId>
+			<version>2.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.shiro</groupId>
