--- a/ShareModel/src/main/resources/application.properties
+++ b/ShareModel/src/main/resources/application.properties
@@ -45,7 +45,7 @@ spring.thymeleaf.cache=false
 #thymeleaf end
 
 #Shiro start
-shiro.loginUrl=/
+shiro.loginUrl=/login
 shiro.successUrl=/index
 shiro.errorUrl=/403
 #Shiro end
