--- a/ShareModel/pom.xml
+++ b/ShareModel/pom.xml
@@ -102,11 +102,10 @@
 			<artifactId>shiro-ehcache</artifactId>
 			<version>${shiro.version}</version>
 		</dependency>
-		<!--google的验证码框架-->
 		<dependency>
-			<groupId>com.google.code.kaptcha</groupId>
+			<groupId>com.github.penggle</groupId>
 			<artifactId>kaptcha</artifactId>
-			<version>2.3</version>
+			<version>2.3.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.shiro</groupId>
