--- a/ShareModel/pom.xml
+++ b/ShareModel/pom.xml
@@ -131,6 +131,12 @@
 			<artifactId>bootstrap</artifactId>
 			<version>3.3.5</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.webjars.bower/metisMenu -->
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>metisMenu</artifactId>
+			<version>1.1.3</version>
+		</dependency>
 		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>vue</artifactId>
